--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
+    "firebase": "^11.0.1",
     "snowflake-sdk": "^1.15.0"
   }
 }
